--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"url":"https://www.mplsfarmersmarket.com/lyndale-market.html","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","headline":"Lyndale Market","@type":"WebPage","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/lyndale-market.html","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","headline":"Lyndale Market","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -157,7 +157,7 @@
         
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
-        <strong>Now open daily 6 am to 1 pm May- October 31st<br><br>-----------------------------------------------<br>EBT is now closed for the season! Please join us next year!</strong><br><br><strong>Winter Market Hours&nbsp;</strong><br>Select dates 9 am to Noon<br>------------------------------<br><strong>November: </strong><br>Saturday's and Sunday's&nbsp;<br>(4th, 5th, 11th, 12th, 18th, 19th, 25th, 26th)<br><br><strong>December:</strong><br>Saturday's and Sunday's<br>(2nd, 3rd, 9th, 10th, 16th, 17th, 23rd, 30th)<br><em>Stay tuned for more dates!</em>
+        <strong><br>EBT is now closed for the season! Please join us next year!</strong><br><br><strong>Winter Market Hours&nbsp;</strong><br>Select dates 9 am to Noon<br>------------------------------<br><strong>November: </strong><br>Saturday's and Sunday's&nbsp;<br>(4th, 5th, 11th, 12th, 18th, 19th, 25th, 26th)<br><br><strong>December:</strong><br>Saturday's and Sunday's<br>(2nd, 3rd, 9th, 10th, 16th, 17th, 23rd, 30th)<br><br><strong>January:</strong><br>Saturday 6th and 20th<br><br><strong>February:</strong><br>Saturday 3rd and 17th<strong>&nbsp;<br><br>March:</strong><br>Saturday 2nd and 16th<br><br><strong>April:</strong><br>Saturday 6th, 13th, 20th, 27th<br>Sunday 28th
       </p>
       <p class="market-page-address editable" data-cms-index="3" data-cms-source="/lyndale-market.html">
         312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405
