Updated 2 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -154,10 +154,10 @@
         MPLS Farmers Market
       </h2>
       <h5 class="editable" data-cms-index="1" data-cms-source="/lyndale-market.html">
-        <strong><br>Christmas trees have arrived!&nbsp;<br><br>Hours are:</strong><br><br>Wry Tree Farm's Monday-Sunday 7am to 9pm<br><br>Swan Tree Farm's&nbsp; Sun-Thurs 9am-7pm &amp; Fri-Sat 9am-9pm<br>
+        <strong><br>There will be no market on Saturday December 30th- Sorry for any inconveince this may cause!</strong>
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
-        <strong><br>EBT is now closed for the season! Please join us next year!</strong><br><br><strong>Winter Market Hours&nbsp;</strong><br>Select dates 9 am to Noon<br>------------------------------<br><strong>November: </strong><br>Saturday's and Sunday's&nbsp;<br>(4th, 5th, 11th, 12th, 18th, 19th, 25th, 26th)<br><br><strong>December:</strong><br>Saturday's and Sunday's<br>(2nd, 3rd, 9th, 10th, 16th, 17th, 23rd, 30th)<br><br><strong>January:</strong><br>Saturday 6th and 20th<br><br><strong>February:</strong><br>Saturday 3rd and 17th<strong>&nbsp;<br><br>March:</strong><br>Saturday 2nd and 16th<br><br><strong>April:</strong><br>Saturday 6th, 13th, 20th, 27th<br>Sunday 28th
+        <strong><br>EBT is now closed for the season! Please join us next year!</strong><br><br><strong>Winter Market Hours&nbsp;</strong><br>Select dates 9 am to Noon<br>------------------------------<br><strong>November: </strong><br>Saturday's and Sunday's&nbsp;<br>(4th, 5th, 11th, 12th, 18th, 19th, 25th, 26th)<br><br><strong>December:</strong><br>Saturday's and Sunday's<br>(2nd, 3rd, 9th, 10th, 16th, 17th, 23rd)<br><br><strong>January:</strong><br>Saturday 6th and 20th<br><br><strong>February:</strong><br>Saturday 3rd and 17th<strong>&nbsp;<br><br>March:</strong><br>Saturday 2nd and 16th<br><br><strong>April:</strong><br>Saturday 6th, 13th, 20th, 27th<br>Sunday 28th
       </p>
       <p class="market-page-address editable" data-cms-index="3" data-cms-source="/lyndale-market.html">
         312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405
