Updated 3 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -154,7 +154,7 @@
         MPLS Farmers Market
       </h2>
       <h5 class="editable" data-cms-index="1" data-cms-source="/lyndale-market.html">
-        <strong><br>There will be no market on Saturday December 30th- Sorry for any inconveince this may cause!</strong>
+        
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
         <strong><br>EBT is now closed for the season! Please join us next year!</strong><br><br><strong>Winter Market Hours&nbsp;</strong><br>Select dates 9 am to Noon<br>------------------------------<br><strong>January:</strong><br>Saturday 6th and 20th<br><br><strong>February:</strong><br>Saturday 3rd and 17th<strong>&nbsp;<br><br>March:</strong><br>Saturday 2nd and 16th<br><br><strong>April:</strong><br>Saturday 6th, 13th, 20th, 27th<br>Sunday 28th
@@ -172,7 +172,7 @@
     <div class="market-page-tagline">
       <div class="col-12">
         <p class="editable" data-cms-index="5" data-cms-source="/lyndale-market.html">
-          As the largest farmer-managed markets in the state, we serve as a community resource, meeting place, tourist draw and, most importantly, a place to access Minnesota’s greatest selection of fresh produce, plants and locally made products!
+          As the largest farmer-managed markets in the state, we serve as a community resource, meeting place, tourist draw and, most importantly, a place to access Minnesota's greatest selection of fresh produce, plants and locally made products!
         </p>
       </div>
     </div>
