Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     
       <div class="d-inline-block">
         <a class="item" href="" target="_blank">
-          <img alt="" class="img-large ig-img img-fluid" src="">
+          <img alt="" class="img-large ig-img img-fluid" data-cms-original-src="/uploads/20190901-071643-1.jpg" src="/uploads/20190901-071643-1.jpg?_cchid=e063ab32b74c7973226d2e97f8d6ca31">
         </a>
       </div>
     
