Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     
       <div class="d-inline-block">
         <a class="item" href="https://www.instagram.com/p/CPLKVcDHTtn/" target="_blank">
-          <img alt="Morels" class="img-large ig-img img-fluid" data-cms-original-src="assets/img/instagram/ig02.jpeg" src="/assets/img/instagram/ig02.jpeg?_cchid=536e7aa2941abce04d3c502074af0c15">
+          <img alt="Morels" class="img-large ig-img img-fluid" data-cms-original-src="/uploads/habaneros.jpeg" src="/uploads/habaneros.jpeg?_cchid=48092830d6cd4347d31b11476486313a">
         </a>
       </div>
     
