Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
       </div>
     
       <div class="d-inline-block">
-        <a class="item" href="https://www.instagram.com/p/COoPIMbN-qF/" target="_blank">
-          <img alt="Vegetable Shopping" class="img-large ig-img img-fluid" data-cms-original-src="assets/img/instagram/ig09.jpeg" src="/assets/img/instagram/ig09.jpeg?_cchid=76995587e3cb0284cdaf81a2e6eeda89">
+        <a class="item" href="" target="_blank">
+          <img alt="Vegetable Shopping" class="img-large ig-img img-fluid" data-cms-original-src="/uploads/bonnie-dehn-and-peggy.jpeg" src="/uploads/bonnie-dehn-and-peggy.jpeg?_cchid=6dd7d892f741a12135992186f18e2b74">
         </a>
       </div>
     
