Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     
       <div class="d-inline-block">
         <a class="item" href="https://www.instagram.com/p/CPLJ7G3NxTl/" target="_blank">
-          <img alt="Asparagus" class="img-large ig-img img-fluid" data-cms-original-src="assets/img/instagram/ig03.jpeg" src="/assets/img/instagram/ig03.jpeg?_cchid=698ec12b822cf0db5c580c6b9f8698a5">
+          <img alt="Asparagus" class="img-large ig-img img-fluid" data-cms-original-src="/uploads/image000002-4.jpg" src="/uploads/image000002-4.jpg?_cchid=f2880df97ae4ad42532649a9100075c3">
         </a>
       </div>
     
