Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -312,6 +312,12 @@
         </a>
       </div>
     
+      <div class="d-inline-block">
+        <a class="item" href="" target="_blank">
+          <img alt="" class="img-large ig-img img-fluid" data-cms-original-src="/uploads/img-4406.jpg" src="/uploads/img-4406.jpg?_cchid=a3ecacb421006941fc26fa8c14289801">
+        </a>
+      </div>
+    
 
   </div>
 </div>
