Updated 2 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -157,7 +157,7 @@
         
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
-        <strong><br>EBT is now closed for the season! Please join us next year!</strong><br><br><strong>Winter Market Hours&nbsp;</strong><br>Select dates 9 am to Noon<br>------------------------------<br><strong>January:</strong><br>Saturday 6th and 20th<br><br><strong>February:</strong><br>Saturday 3rd and 17th<strong>&nbsp;<br><br>March:</strong><br>Saturday 2nd and 16th<br><br><strong>April:</strong><br>Saturday 6th, 13th, 20th, 27th<br>Sunday 28th
+        <strong><br>EBT is now closed for the season! Please join us next year!</strong><br><br><strong>Winter Market Hours&nbsp;</strong><br>Select dates 9 am to Noon<br>------------------------------<br><strong>March:</strong><br>Saturday 2nd and 16th<br><br><strong>April:</strong><br>Saturday 6th, 13th, 20th, 27th<br>Sunday 28th
       </p>
       <p class="market-page-address editable" data-cms-index="3" data-cms-source="/lyndale-market.html">
         312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405
