Updated 2 files via CloudCannon

--- a/vendors.html
+++ b/vendors.html
@@ -7744,7 +7744,7 @@
   <div class="vendor__foot mx-1 d-flex justify-content-between">
     <div class="vendor__contact">
       
-        <a href="thetroutmonger.com" rel="noopener noreferrer" target="_blank"><h4><b>Visit our website</b></h4></a>
+        <a href="www.thetroutmonger.com" rel="noopener noreferrer" target="_blank"><h4><b>Visit our website</b></h4></a>
 
       
     </div>
