Updated 4 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -165,7 +165,7 @@
       </div>
     </div>
     <div class="col-12 col-lg-7 lyn-market-page-hero-img">
-      <img class="img-fluid editable" data-cms-index="4" data-cms-source="/lyndale-market.html" src="/uploads/346295158-2177843332404379-2250891337897089964-n.jpg" width="890">
+      <img class="img-fluid editable" data-cms-index="4" data-cms-original-src="/uploads/pxl-20230507-112655005-portrait-2x.jpg" data-cms-original-srcset="/uploads/pxl-20230507-112655005-portrait-2x.jpg 1x, /uploads/pxl-20230507-112655005-portrait-2x-2x.jpg 2x" data-cms-source="/lyndale-market.html" src="/uploads/pxl-20230507-112655005-portrait-2x.jpg?_cchid=78f1051e4b28f6e457c34c44c4035170" srcset="/uploads/pxl-20230507-112655005-portrait-2x.jpg?_cchid=78f1051e4b28f6e457c34c44c4035170 1x, /uploads/pxl-20230507-112655005-portrait-2x-2x.jpg?_cchid=56782fb6236c400b1de820caf0494806 2x" width="890">
     </div>
   </div>
   <div class="market-bg-wrapper">
