Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -188,14 +188,13 @@
     <div class="col-12 col-lg-12 home-market-info editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
       <h5>Minneapolis Farmers Market</h5>
       <p>----------------------------</p>
-      <p><strong>Winter Market Hours&nbsp;</strong></p>
-      <p>Select dates 9 am to Noon</p>
+      <p><strong>Summer Season Hours&nbsp;</strong></p>
+      <p>May 1 - October 31</p>
       <p>------------------------------</p>
-      <p><strong>March:</strong></p>
-      <p>Saturday the 2nd and the 16th</p>
-      <p><strong>April:</strong></p>
-      <p>Saturday the 6th, 13th, 20th, and 27th</p>
-      <p>Sunday the 28th</p>
+      <p><strong>Wednesday-Friday&nbsp;</strong></p>
+      <p>7 a.m. - 1 p.m.</p>
+      <p><strong>Saturday-Sunday</strong></p>
+      <p>6 a.m. - 1 p.m.</p>
       <p>&nbsp;</p>
       <p>We're sorry, no dogs are allowed!</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
