Updated 3 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -213,7 +213,7 @@
             <h5 class="mb-0 editable" data-cms-index="0" data-cms-source="/_includes/l-faqs.html">
               Visiting the Lyndale Market<svg aria-hidden="true" class="svg-inline--fa fa-angle-down fa-w-10 rotate-icon" data-fa-i2svg="" data-icon="angle-down" data-prefix="fas" role="img" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
                 <path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" fill="currentColor"></path>
-              </svg><!-- <i class="fas fa-angle-down rotate-icon"></i> -->
+              </svg>
             </h5>
           </a>
         </div>
@@ -236,13 +236,13 @@
               Is the Lyndale Market open even if it’s raining?
             </p>
             <p class="editable" data-cms-index="6" data-cms-source="/_includes/l-faqs.html">
-              Of course! We’re open seven days a week, rain or shine May - Oct. We are open select dates during the winter. But don’t worry – you won’t get wet under our famous red sheds.
+              Of course! We're open 5 days a week, rain or shine May - Oct. We are open select dates during the winter. But dont worry – you won't get wet under our famous red sheds.
             </p>
             <p class="faq-bold editable" data-cms-index="7" data-cms-source="/_includes/l-faqs.html">
               Are all six sheds part of the Minneapolis Farmers Market?
             </p>
             <p class="editable" data-cms-index="8" data-cms-source="/_includes/l-faqs.html">
-              The three larger sheds on the northside of Third Avenue are a part of our Market, which is managed by the Central Minnesota Vegetables Growers Association (CMVGA). We’re a membership-based organization with specific regulations and guidelines that benefit our members – and our customers.<br>The three smaller sheds on the south side of Third Avenue are run by the Farmers Market Annex. The Minneapolis Farmers Market Annex is a privately run business and is not affiliated with our Market.
+              The three larger sheds on the north side of Third Avenue are a part of our Market, which is managed by the Central Minnesota Vegetables Growers Association (CMVGA). We're a membership-based organization with specific regulations and guidelines that benefit our members – and our customers.<br>The three smaller sheds on the south side of Third Avenue are run by the Farmers Market Annex. The Minneapolis Farmers Market Annex is a privately run business and is not affiliated with our Market.
             </p>
             <p class="faq-bold editable" data-cms-index="9" data-cms-source="/_includes/l-faqs.html">
               Is the Lyndale Market handicap accessible?
@@ -254,25 +254,25 @@
               Can I bring a wagon or cart to carry my purchases?
             </p>
             <p class="editable" data-cms-index="12" data-cms-source="/_includes/l-faqs.html">
-              We’d love for you to fill a whole wagon during your visit!
+              We'd love for you to fill a whole wagon during your visit!
             </p>
             <p class="faq-bold editable" data-cms-index="13" data-cms-source="/_includes/l-faqs.html">
               Are inline skates or any other type of recreational modes of transportation permitted?
             </p>
             <p class="editable" data-cms-index="14" data-cms-source="/_includes/l-faqs.html">
-              For the safety of all our visitors and products of our vendors, we ask that you take them off while you’re in the Market vicinity.
+              For the safety of all our visitors and products of our vendors, we ask that you take them off while you're in the Market vicinity.
             </p>
             <p class="faq-bold editable" data-cms-index="15" data-cms-source="/_includes/l-faqs.html">
               Is there a place to eat?
             </p>
             <p class="editable" data-cms-index="16" data-cms-source="/_includes/l-faqs.html">
-              Eating is only allowed in the designated eating area located near the women’s restrooms. We have tables that are available for up to four guests from the same party. You must keep your distance from one another and only have your mask off while eating. Otherwise all food is prepared for to-go only.
+              Eating is only allowed in the designated eating area located near the women's restrooms. We have tables that are available for up to four guests from the same party. You must keep your distance from one another and only have your mask off while eating. Otherwise all food is prepared for to-go only.
             </p>
             <p class="faq-bold editable" data-cms-index="17" data-cms-source="/_includes/l-faqs.html">
               Are dogs allowed at the Lyndale Market?
             </p>
             <p class="editable" data-cms-index="18" data-cms-source="/_includes/l-faqs.html">
-              As much as we love pets, we ask that you leave your four-legged friends or any live animal at home during your visit. Service dogs are permitted, it’s helpful to staff to have it be clearly displayed.
+              As much as we love pets, we ask that you leave your four-legged friends or any live animal at home during your visit. Service dogs are permitted, it's helpful to staff to have it be clearly displayed.
             </p>
           </div>
         </div>
@@ -286,7 +286,7 @@
             <h5 class="mb-0 editable" data-cms-index="19" data-cms-source="/_includes/l-faqs.html">
               Parking at the Lyndale Market <svg aria-hidden="true" class="svg-inline--fa fa-angle-down fa-w-10 rotate-icon" data-fa-i2svg="" data-icon="angle-down" data-prefix="fas" role="img" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
                 <path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" fill="currentColor"></path>
-              </svg><!-- <i class="fas fa-angle-down rotate-icon"></i> -->
+              </svg>
             </h5>
           </a>
         </div>
@@ -299,7 +299,7 @@
             <p class="faq-bold">Is there handicap parking available?</p>
             <p>We offer handicap parking at Third Avenue N. and Lyndale Avenue, and at Third Avenue N. and Border Avenue.</p>
             <p class="faq-bold">Can I park in stalls that are not being used by vendors?</p>
-            <p>Parking in the stalls is permitted Monday through Friday, but isn’t allowed on weekends, due to our high volume of visitors.</p>
+            <p>Parking in the stalls is permitted Monday through Friday, but isn't allowed on weekends, due to our high volume of visitors.</p>
             <p class="faq-bold">Do you have a bicycle parking area?</p>
             <p>There is a bike rack on the east side of the market along Border Ave. where you can lock your bike.</p>
           </div>
@@ -314,7 +314,7 @@
             <h5 class="mb-0 editable" data-cms-index="21" data-cms-source="/_includes/l-faqs.html">
               Products &amp; Vendors <svg aria-hidden="true" class="svg-inline--fa fa-angle-down fa-w-10 rotate-icon" data-fa-i2svg="" data-icon="angle-down" data-prefix="fas" role="img" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
                 <path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" fill="currentColor"></path>
-              </svg><!-- <i class="fas fa-angle-down rotate-icon"></i> -->
+              </svg>
             </h5>
           </a>
         </div>
@@ -322,13 +322,13 @@
         <div aria-labelledby="headingThree3" class="collapse" data-parent="#accordionEx" id="collapseThree3" role="tabpanel">
           <div class="card-body editable" data-cms-index="22" data-cms-source="/_includes/l-faqs.html">
             <p class="faq-bold">What products are in season right now?</p>
-            <p>MNGrown has provided a calendar <a href="https://minnesotagrown.com/whats-in-season/">click here</a> to check it out.</p>
+            <p>MNGrown has provided a calendar with general produce guidelines - <a href="https://minnesotagrown.com/whats-in-season/" rel="noopener" target="_blank">click here</a> to check it out. Feel free to give our office a call ahead of your visit if you're on the hunt for something specific.&nbsp;</p>
             <p class="faq-bold">Is everything at the Market locally grown?</p>
-            <p>Most of our vendors grow, harvest and sell their own products. However, with Minnesota’s short growing season (only 107 to 163 frost-free days), we also include produce grown elsewhere so we can offer you the widest selection of fresh food for the longest time.</p>
-            <p class="faq-bold">How can I tell if a vendor’s produce is locally grown?</p>
-            <p>Every vendor is required to display signage featuring the Minneapolis Farmers Market logo that indicates whether they are a local grower, producer or manufacturer or a Minneapolis licensed reseller.</p>
+            <p>Most of our vendors grow, harvest and sell their own products. However, with Minnesota's short growing season (only 107 to 163 frost-free days), we also include produce grown elsewhere so we can offer you the widest selection of fresh food for the longest time.&nbsp;</p>
+            <p class="faq-bold">How can I tell if a vendor's produce is locally grown?</p>
+            <p>Every vendor is required to display signage featuring the Minneapolis Farmers Market logo that indicates whether they are a local grower, producer or manufacturer or a Minneapolis licensed reseller.&nbsp;</p>
             <p class="faq-bold">Are organic products available?</p>
-            <p>We know our customers have individual needs and commitments when it comes to their food, and our vendors offer a wide variety of products to meet those needs. Some offer organic products. Some follow organic growing methods but haven’t gone through the official screening process to be able to use the organic classification. If you’d like more information about the products you find at our Market, feel free to ask our vendors. They love to talk with visitors about their products.</p>
+            <p>We know our customers have individual needs and commitments when it comes to their food, and our vendors offer a wide variety of products to meet those needs. Some offer organic products. Some follow organic growing methods but haven't gone through the official screening process to be able to use the organic classification. If you'd like more information about the products you find at our Market, feel free to ask our vendors. They love to talk with visitors about their products.</p>
             <p class="faq-bold">When do you have the largest selection?</p>
             <p>Come visit us on Saturdays and Sundays to find the most vendors with the largest product selection. During the week, Friday offers the largest selection of products.</p>
             <p class="faq-bold">How many vendors are at the Market?</p>
@@ -345,7 +345,7 @@
             <h5 class="mb-0 editable" data-cms-index="23" data-cms-source="/_includes/l-faqs.html">
               Purchases at the Market <svg aria-hidden="true" class="svg-inline--fa fa-angle-down fa-w-10 rotate-icon" data-fa-i2svg="" data-icon="angle-down" data-prefix="fas" role="img" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
                 <path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" fill="currentColor"></path>
-              </svg><!-- <i class="fas fa-angle-down rotate-icon"></i> -->
+              </svg>
             </h5>
           </a>
         </div>
