--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -157,7 +157,7 @@
         
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
-        <strong><br>Our EBT program will begin May 3, 2024.</strong><br><strong>Season Hours</strong>&nbsp;<br>Wednesday through Friday 7 a.m. - 1 p.m.<br>Saturday &amp; Sunday 6 a.m. - 1 p.m.&nbsp;
+        <strong>Our EBT program will begin May 1, 2024.</strong><br><strong>Season Hours</strong>&nbsp;<br>Wednesday through Friday 7 a.m. - 1 p.m.<br>Saturday &amp; Sunday 6 a.m. - 1 p.m.&nbsp;
       </p>
       <p class="market-page-address editable" data-cms-index="3" data-cms-source="/lyndale-market.html">
         312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405
