Updated 4 files via CloudCannon

--- a/ebt-guidelines.html
+++ b/ebt-guidelines.html
@@ -154,13 +154,13 @@
           Electronic Benefit Transfer (EBT) Guidelines
         </h1>
         <p class="ebt-text editable" data-cms-index="1" data-cms-source="/ebt-guidelines.html">
-          <strong>EBT is now closed for the season.<br>Please join us next year!</strong><br>
+          <strong>EBT is open Friday-Sunday from 8 a.m. - 1 p.m. for the season.&nbsp;</strong><br>
         </p>
         <h2 class="ebt-text editable" data-cms-index="2" data-cms-source="/ebt-guidelines.html">
           Here is how it works!
         </h2>
         <p class="ebt-text editable" data-cms-index="3" data-cms-source="/ebt-guidelines.html">
-          Look for a sign that says "EBT Accepted Here" or simply ask the vendor if they accept EBT Tokens. EBT Staff will be located at the EBT booth and will swipe your EBT card to make the token exchange.<br><br>Decide how much you want to spend to exchange for EBT Tokens. EBT Tokens are valued at $1 or $5 and accepted at the discretion of each individual vendor. Please note the following:<br><br>1. NO change will be given<br>2. There is no fee to exchange for EBT Tokens<br>3. Customers are encouraged to use their EBT Tokens right away and only same day refunds will be honored.<br><br><a href="https://www.hungersolutions.org/programs/market-bucks/" rel="noopener" target="_blank">Market Bucks</a> match SNAP-EBT spending dollar-for-dollar (up to $10). There are 4 easy steps to using SNAP-EBT at our farmers' markets:<br><br>1. Go to the Information Booth at the farmers' market.<br>2. Swipe your EBT card and spend $10.*<br>3. Get $10* in free Market Bucks and $10 in Produce Market Bucks each visit.<br>*Not valid with P-EBT Cards*<br>4. Shop for up to $30 of SNAP-eligible food at the farmers' market.<br><br>*Up to $10 per market visit. You do not have to spend the full $10 each time.
+          Look for a sign that says "EBT Accepted Here" or simply ask the vendor if they accept EBT Tokens. EBT Staff will be located at the EBT booth and will swipe your EBT card to make the token exchange.<br><br>Decide how much you want to spend to exchange for EBT Tokens. EBT Tokens are valued at $1, $5 or $10 and accepted at the discretion of each individual vendor. Please note the following:<br><br>1. NO change will be given<br>2. There is no fee to exchange for EBT Tokens<br>3. Customers are encouraged to use their EBT Tokens right away and only same day refunds will be honored.<br><br><a href="https://www.hungersolutions.org/programs/market-bucks/" rel="noopener" target="_blank">Market Bucks</a> match SNAP-EBT spending dollar-for-dollar (up to $10). There are 4 easy steps to using SNAP-EBT at our farmers market:<br><br>1. Go to the Information Booth at the farmers market.<br>2. Swipe your EBT card and spend $10.*<br>3. Get $10* in free Market Bucks and $10 in Produce Market Bucks each visit.<br>*Not valid with P-EBT Cards*<br>4. Shop for up to $30 of SNAP-eligible food at the farmers' market.<br><br>*Up to $10 per market visit. You do not have to spend the full $10 each time.
         </p>
       </div>
       <!-- <div class="ebt-lists"> -->
@@ -169,7 +169,7 @@
             What can I buy with my EBT tokens?
           </h2>
           <p class="ebt-text editable" data-cms-index="5" data-cms-source="/ebt-guidelines.html">
-            EBT Tokens are accepted at the discretion of each individual vendor. Customers may be able to purchase vegetables, fruit, dairy products, meat, poultry, fish, eggs, bread, cereals, jam, syrup, honey, rice, grains and dried beans, pickles and packaged pastries. Cold wrapped and packaged (to-go) edible items. Also, plants that produce food can be purchased (ex: tomato or basil plants).<br><br>You will NOT be able to purchase: Cut- flowers, shrubs, decorative plants, fall ornamentals, pumpkins, non-edible plants, non-food items, hot or cold immediately consumable foods, pet food, soaps, paper products, crafts or clothing items, fountain drinks hot or cold to include coffee &amp; tea.
+            EBT Tokens are accepted at the discretion of each individual vendor. Customers may be able to purchase vegetables, fruit, dairy products, meat, poultry, fish, eggs, bread, cereals, jam, syrup, honey, rice, grains and dried beans, pickles and packaged pastries. Cold wrapped and packaged (to-go) edible items. Also, plants that produce food can be purchased (ex: tomato or basil plants).<br><br>You will NOT be able to purchase: Cut- flowers, shrubs, decorative plants, fall ornamentals, pumpkins, non-edible plants, non-food items, hot or cold immediately consumable foods, pet food, soaps, paper products, crafts or clothing items, fountain drinks (hot or cold), including coffee &amp; tea.
           </p>
         <!-- </div> -->
         <!-- <div class="col-12 col-lg-4">
@@ -210,7 +210,7 @@
           Farmers Market Nutrition Program (FMNP) Vouchers
         </h2>
         <p class="ebt-text editable" data-cms-index="7" data-cms-source="/ebt-guidelines.html">
-          The FMNP vouchers are accepted at the discretion of each individual vendor and exchanges and refunds are at the discretion of the vendor. Please look for a sign that says “Farmers Market Nutrition Program Checks Accepted Here” or simply ask the vendor if they accept FMNP Vouchers. Vouchers can only be used to purchase MN Grown produce items (fresh fruits, vegetables and cut herbs). They can not be exchanged for tokens like SNAP/EBT benefits or cash. SNAP/EBT Tokens and FMNP Vouchers cannot be exchanged for US currency.
+          The FMNP vouchers are accepted at the discretion of each individual vendor and exchanges and refunds are at the discretion of the vendor. Please look for a sign that says "Farmers Market Nutrition Program Checks Accepted Here" or simply ask the vendor if they accept FMNP Vouchers. Vouchers can only be used to purchase MN Grown produce items (fresh fruits, vegetables and cut herbs). They can not be exchanged for tokens like SNAP/EBT benefits or cash. SNAP/EBT Tokens and FMNP Vouchers cannot be exchanged for US currency.
         </p>
       </div>
       <div class="editable" data-cms-index="8" data-cms-source="/ebt-guidelines.html">
