--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -154,10 +154,10 @@
         MPLS Farmers Market
       </h2>
       <h5 class="editable" data-cms-index="1" data-cms-source="/lyndale-market.html">
-        
+        Season Hours
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
-        <strong>Our EBT program will begin May 1, 2024.</strong><br><strong>Season Hours</strong>&nbsp;<br>Wednesday through Friday 7 a.m. - 1 p.m.<br>Saturday &amp; Sunday 6 a.m. - 1 p.m.&nbsp;
+        Wednesday through Friday 7 a.m. - 1 p.m.<br>Saturday &amp; Sunday 6 a.m. - 1 p.m.&nbsp;
       </p>
       <p class="market-page-address editable" data-cms-index="3" data-cms-source="/lyndale-market.html">
         312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405
@@ -233,7 +233,7 @@
               You know what they say, early bird gets the worm! For the best selection of produce come to the market right when we open at 6am. It is very common for produce that has just begun to be in season to sell out very quickly. If you’d like more time to talk with our vendors and shop with less people around, we recommend trying out our weekday market Monday - Friday and parking is free in any available spot inside the market.
             </p>
             <p class="faq-bold editable" data-cms-index="5" data-cms-source="/_includes/l-faqs.html">
-              Is the Lyndale Market open even if it’s raining?
+              Is the Lyndale Market open even if it's raining?
             </p>
             <p class="editable" data-cms-index="6" data-cms-source="/_includes/l-faqs.html">
               Of course! We're open 5 days a week, rain or shine May - Oct. We are open select dates during the winter. But dont worry – you won't get wet under our famous red sheds.
