Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <p>&nbsp;</p>
       <p>We're sorry, no dogs are allowed!</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
-      <p><a class="btn btn-lg theme-button" href="/lyndale-market" role="button">Learn More</a></p>
+      <p><a href="https://fleet-kouprey.cloudvent.net/lyndale-market">Learn More</a></p>
     </div>
   </div>
 </div>
