--- a/vendors.html
+++ b/vendors.html
@@ -616,6 +616,9 @@
   <div class="vendor__foot mx-1 d-flex justify-content-between">
     <div class="vendor__contact">
       
+        <a href="https://www.instagram.com/banhsizzle/" rel="noopener noreferrer" target="_blank"><h4><b>Visit our website</b></h4></a>
+
+      
     </div>
 
     <div class="vendor__icons float-right">
