--- a/vendors.html
+++ b/vendors.html
@@ -450,7 +450,7 @@
   <div class="vendor__foot mx-1 d-flex justify-content-between">
     <div class="vendor__contact">
       
-        <a href="mailto:artandsoul50720@gmail.com" rel="noopener noreferrer" target="_blank"><h4><b>Email us</b></h4></a>
+        <a href="https://www.theappleberryfarm.com/" rel="noopener noreferrer" target="_blank"><h4><b>Visit our website</b></h4></a>
 
       
     </div>
