Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       Meet the worker bees who make our markets flourish
     </h3>
     <p class="editable" data-cms-index="1" data-cms-source="/_includes/home-vendors.html">
-      Our markets empower visitors to develop a personal connection to the food they eat by learning where it comes from, how it was treated and how to prepare it—directly from the grower.
+      Our market empowers visitors to develop a personal connection to the food they eat by learning where it comes from, how it was treated and how to prepare it—directly from the grower.
     </p>
     <a class="btn btn-lg theme-button" href="/vendors" role="button">Check out our vendors</a>
   </div>
