Updated 2 files via CloudCannon

--- a/ebt-guidelines.html
+++ b/ebt-guidelines.html
@@ -154,7 +154,7 @@
           Electronic Benefit Transfer (EBT) Guidelines
         </h1>
         <p class="ebt-text editable" data-cms-index="1" data-cms-source="/ebt-guidelines.html">
-          <strong>EBT is open Friday-Sunday from 8 a.m. - 1 p.m. for the season.&nbsp;</strong><br>
+          <em><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;EBT is open Friday - Sunday from 8 a.m. - 1 p.m. for the season.</strong></em><strong>&nbsp;</strong><br>
         </p>
         <h2 class="ebt-text editable" data-cms-index="2" data-cms-source="/ebt-guidelines.html">
           Here is how it works!
@@ -215,7 +215,11 @@
       </div>
       <div class="editable" data-cms-index="8" data-cms-source="/ebt-guidelines.html">
         <h2 class="ebt-text mb-3">&nbsp;</h2>
-        <p>&nbsp;</p>
+        <ul>
+          <li>
+            <p>Curious about SNAP? Visit the <a href="https://mn.gov/dhs/people-we-serve/adults/economic-assistance/food-nutrition/programs-and-services/supplemental-nutrition-assistance-program.jsp">Supplemental Nutrition Assistance Program (SNAP)</a> site for more information.&nbsp;&nbsp;</p>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
