Updated 2 files via CloudCannon

--- a/ebt-guidelines.html
+++ b/ebt-guidelines.html
@@ -154,7 +154,7 @@
           Electronic Benefit Transfer (EBT) Guidelines
         </h1>
         <p class="ebt-text editable" data-cms-index="1" data-cms-source="/ebt-guidelines.html">
-          <em><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;EBT is open Friday - Sunday from 8 a.m. - 1 p.m. for the season.</strong></em><strong>&nbsp;</strong><br>
+          <em><strong>EBT is open Friday - Sunday from 8 a.m. - 1 p.m. for the season.</strong></em><strong>&nbsp;</strong><br>
         </p>
         <h2 class="ebt-text editable" data-cms-index="2" data-cms-source="/ebt-guidelines.html">
           Here is how it works!
